--- a/q1/app/src/main/AndroidManifest.xml
+++ b/q1/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Questão01">
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.ItemView">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
